--- a/templates/react-ts-tailwind-sc/stylesheet/components.css
+++ b/templates/react-ts-tailwind-sc/stylesheet/components.css
@@ -1,11 +1,16 @@
 .btn {
   @apply rounded px-4 py-3 cursor-pointer;
-  &:focus {
-    @apply outline-none shadow-outline;
-  }
 }
+
+.btn:focus {
+  @apply outline-none shadow-outline;
+}
+
 .btn-gray {
   @apply bg-gray-700 text-white;
+}
+
+.btn-gray:hover {
   &:hover {
     @apply bg-gray-800;
   }
